Closed
Bug 241447
Opened 21 years ago
Closed 21 years ago
Typing in toolbar affected by character duplication (doubled / duplicated characters in address bar / text fields)
Categories
(Core :: XUL, defect)
Core
XUL
Tracking
()
VERIFIED
FIXED
mozilla1.8alpha1
People
(Reporter: amiglia, Assigned: emaijala+moz)
References
()
Details
Attachments
(1 file)
1.04 KB,
patch
|
emaijala+moz
:
review+
bryner
:
superreview+
|
Details | Diff | Splinter Review |
User-Agent: Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.8a) Gecko/20040422 Firefox/0.8.0+
Build Identifier: Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.8a) Gecko/20040422 Firefox/0.8.0+
Typing in any of text-field in address bar is affected by character duplication
(casual).
- Address Bar
- Search bar
- Google bar plugin
NOT Affected in html forms!
- Text fields
- Text Area
Ciao!
Reproducible: Always
Steps to Reproduce:
1. Type an URL
2.
3.
Actual Results:
(Typing) www.mozilla.org -> (Result) wwww.moziilllaa.oorgg
(Typing) www.newsarama.it -> (Result) wwww.neewsaraamma.iit
Copy&Paste affected too. Sometimes "ctrl+v" paste text twice
The problem raised after installing the lates win32 nightly build (2004-04-22)
Comment 1•21 years ago
|
||
Works for me, 20040423 Firefox/0.8.0+, Mac OS X 10.2.8
Maybe it's a Windows-specific bug, but if so then nobody else has reported it yet.
Andrea, could you please test the following:
- Are you using any browser themes other than the default Firefox one? If so,
please try disabling them.
- Are you using any browser extensions, such as the Google bar plugin that you
mentioned? If so, please try disabling them.
If neither of those fix it, please try starting with a fresh profile, as your
user profile may have corrupted. See
http://texturizer.net/firefox/faq.html#profilemanager for how to start with a
fresh profile.
Please let us know if any of these things fix it. Please reply using the
comments box on this bug page, as reply by email doesn't work.
cheers,
Wayne
![]() |
||
Comment 2•21 years ago
|
||
Ere, could this be fallout from your win32 key event work?
![]() |
Reporter | |
Comment 3•21 years ago
|
||
I verified the the error occurs ONLY IF the browser is showing a flash applet in
the ANY of the opened tabs.
Comment 4•21 years ago
|
||
Oh. Are you running the latets versions of Flash and Shockwave?
Assignee | ||
Comment 5•21 years ago
|
||
I was able to reproduce it, although on my system it happens very infrequently.
I'll try to dig into this.
Assignee: firefox → ere
Status: UNCONFIRMED → NEW
Component: General → XP Toolkit/Widgets
Ever confirmed: true
Product: Firefox → Browser
Target Milestone: --- → mozilla1.8alpha
Version: unspecified → Trunk
![]() |
Reporter | |
Comment 6•21 years ago
|
||
(In reply to comment #5)
> I was able to reproduce it, although on my system it happens very infrequently.
> I'll try to dig into this.
I have to correct myself. The bug affect html textarea and textfields too.
![]() |
Reporter | |
Comment 7•21 years ago
|
||
Sorry for frequent post but I'm discovering details every minute :-)
The more you type quicly the more the duplication occurs.
Eg.
typing very slowly: www.newsarrama..it (one character duplication)
typing more quicly: wwwww.nneewsaaramaa.iit (seven character duplication)
Comment 8•21 years ago
|
||
See bug 241563 for additional informations.
Setting HW->ALL, OS->ALL and URL. This bug only appears when flash content is
used inside a document of a tab and it still affect only this one.
Comment 9•21 years ago
|
||
*** Bug 241563 has been marked as a duplicate of this bug. ***
Assignee | ||
Comment 10•21 years ago
|
||
Hmm.. if it's a cross-platform problem, it wouldn't be my keyboard handling
changes. I can still take a look, though.
![]() |
||
Comment 11•21 years ago
|
||
http://bugzilla.mozilla.org/show_bug.cgi?id=241563 reporters report that it
affects linux too. I have seen it in firefox on windows 2000 with recent
nightlies.
Assignee | ||
Comment 12•21 years ago
|
||
There is a problem with my key event stuff. Apparently Flash is causing
something to be misplaced in the event queue and the next message after
WM_KEYDOWN isn't WM_KEYPRESS as expected. I'll try to come up with a fix.
Assignee | ||
Comment 13•21 years ago
|
||
I can't recall any reason why not filter out other than key events when
checking for a char message in the queue. This fixes the problem on Windows,
but I can't help the Linux problem. Can anyone reproduce it on Linux?
Assignee | ||
Updated•21 years ago
|
Attachment #147262 -
Flags: superreview?(bryner)
Attachment #147262 -
Flags: review?(neil.parkwaycc.co.uk)
![]() |
||
Updated•21 years ago
|
Attachment #147262 -
Flags: superreview?(bryner) → superreview+
Comment 14•21 years ago
|
||
*** Bug 241955 has been marked as a duplicate of this bug. ***
Comment 15•21 years ago
|
||
*** Bug 241099 has been marked as a duplicate of this bug. ***
Comment 16•21 years ago
|
||
*** Bug 241107 has been marked as a duplicate of this bug. ***
Assignee | ||
Updated•21 years ago
|
Summary: Typing in toolbar affected by character duplication → Typing in toolbar affected by character duplication (doubled / duplicated characters in address bar / text fields)
Comment 17•21 years ago
|
||
Shouldn't this block 1.7?
![]() |
||
Comment 18•21 years ago
|
||
IMHO also FF 0.9
![]() |
||
Comment 19•21 years ago
|
||
*** Bug 242089 has been marked as a duplicate of this bug. ***
![]() |
||
Comment 20•21 years ago
|
||
(In reply to comment #17)
> Shouldn't this block 1.7?
Can you confirm it on a branch build? It seems that this bug appeared after the
branch was cut.
Comment 21•21 years ago
|
||
I don't know if it also occurs within the branch. IMO the QA of this component
could help.
-> QA
QA Contact: jrgmorrison
![]() |
||
Comment 22•21 years ago
|
||
As all you already know it accures flash/shockwave and firefox. For me it
started to happen after 20040415 nightly update. I have XP. And still with
20040429 nightly it's the same.
Assignee | ||
Comment 23•21 years ago
|
||
The problem I'm aware of is trunk only. If someone can confirm it on a branch
build, it's a different case.
Comment 24•21 years ago
|
||
See bug 241099 comment 6. This is a trunk-only bug.
Ere, I'll give you an r= on that patch if you'll take it.
![]() |
||
Comment 25•21 years ago
|
||
This bug DOES affect text entry forms on the page. I was having duplicate text
entries at: http://www.warpradio.com when trying to enter call letters. I
believe this is a flash frame where the text entry is located.
I also experienced the duplicate entries in the address bar and search bar with
this page open.
Comment 26•21 years ago
|
||
Alright! Somebody else have found this too. Then I am not crazy. As soon I
downloaded 20040426 Firefox/0.8.0+ build, I noticed this problem, and it's very
annoying. Seems to happen in the toolbar section only. When typing fast, as
another commenter said.
![]() |
||
Comment 27•21 years ago
|
||
It is in the latest build as well (Mozilla/5.0 (Windows; U; Windows NT 5.0;
en-US; rv:1.8a) Gecko/20040429 Firefox/0.8.0+), with a clean profile and no
extensions. But very random, not easy to reproduce. I write with "10 fingers"
not too fast, just normal.
Assignee | ||
Comment 28•21 years ago
|
||
Comment on attachment 147262 [details] [diff] [review]
Win32 patch
r=dean_tessman accepted. Thanks.
Attachment #147262 -
Flags: review?(neil.parkwaycc.co.uk) → review+
Assignee | ||
Comment 29•21 years ago
|
||
Fix checked in. File a new one for the Linux case if someone can reproduce it.
Status: NEW → RESOLVED
Closed: 21 years ago
Resolution: --- → FIXED
Comment 30•21 years ago
|
||
Ere, sorry I couldn't get to this, I was out last evening and all day today and
I don't have flash installed on my debug build anyway.
I just hope you don't run into any issue with IME messages.
Assignee | ||
Comment 31•21 years ago
|
||
No problem. If we still run into problems, I'll resort to the old and ugly way.
Comment 32•21 years ago
|
||
Ah, I remember what else I was wondering now... does Flash affect your
"WM_CHAR_LATER" test replacement code too?
![]() |
||
Comment 33•21 years ago
|
||
*** Bug 242460 has been marked as a duplicate of this bug. ***
![]() |
Reporter | |
Comment 34•21 years ago
|
||
Just installed May, 4 Nighlty Build and the problem seems resolved.
Good work !
Comment 35•21 years ago
|
||
Verified Fixed. Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.8a)
Gecko/20040518 Firefox/0.8.0+
Status: RESOLVED → VERIFIED
You need to log in
before you can comment on or make changes to this bug.
Description
•