Fix for regression bug 241447: typed characters are doubled if flash content is playing. r=dean_tessman sr=bryner